tasks casi terminadas (problema con el server) - model para confimar la borrada - formularios para crear task

--- a/web/elektron/assets/less/styles.less
+++ b/web/elektron/assets/less/styles.less
@@ -42,7 +42,7 @@
 //@import "bootstrap/pager.less";
 
 // Components: Popovers
-//@import "bootstrap/modals.less";
+@import "bootstrap/modals.less";
 //@import "bootstrap/tooltip.less";
 //@import "bootstrap/popovers.less";
 
