aguante todo. Task terminado

--- a/web/elektron/views/index.html
+++ b/web/elektron/views/index.html
@@ -44,7 +44,7 @@
                 <div class="col-xs-6">
                   <a href="#/components" class="boxes-a boxes-success" >
                     <div class="boxes-title">
-                        <div class="text-center">Componentes activados</div>
+                        <div class="text-center">Componentes conectados</div>
                     </div>
                     <div class="boxes-body">
                         <div class="text-center">{{ components_server_enabled.length || 0 }}</div>
@@ -55,7 +55,7 @@
                 <div class="col-xs-6">
                   <a href="#/components" class="boxes-a boxes-dark" >
                     <div class="boxes-title">
-                        <div class="text-center">Componentes desactivados</div>
+                        <div class="text-center">Componentes desconectados</div>
                     </div>
                     <div class="boxes-body">
                         <div class="text-center">{{ components_server_not_enabled.length || 0 }}</div>
